Fix Notification