@@ -2,62 +2,88 @@ package com.Phong.BackEnd.service;
 
 import com.Phong.BackEnd.dto.request.NotificationRequest;
 import com.Phong.BackEnd.dto.response.ApiResponse;
-import com.Phong.BackEnd.dto.response.NotificationResponse;
+import com.Phong.BackEnd.dto.response.Notification.NotificationResponse;
+import com.Phong.BackEnd.dto.response.Notification.PersonnelInfo;
 import com.Phong.BackEnd.entity.Notification;
+import com.Phong.BackEnd.entity.departments.Department;
+import com.Phong.BackEnd.entity.personnel.Employee;
 import com.Phong.BackEnd.entity.personnel.Manager;
 import com.Phong.BackEnd.entity.personnel.Personnel;
+import com.Phong.BackEnd.repository.EmployeeRepository;
 import com.Phong.BackEnd.repository.NotificationRepository;
 import com.Phong.BackEnd.repository.PersonnelRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.messaging.simp.SimpMessagingTemplate;
+import org.springframework.data.util.Pair;
+import org.springframework.mail.SimpleMailMessage;
+import org.springframework.mail.javamail.JavaMailSender;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class NotificationService {
 
-    private final SimpMessagingTemplate messagingTemplate;
     private final NotificationRepository notificationRepository;
     private final PersonnelRepository personnelRepository;
+    private final JavaMailSender mailSender;
+    private final EmployeeRepository employeeRepository;
+
+    public void sendEmail(String to, String subject, String content) {
+        SimpleMailMessage message = new SimpleMailMessage();
+        message.setTo(to);
+        message.setSubject(subject);
+        message.setText(content);
+        mailSender.send(message);
+    }
 
     public ApiResponse<NotificationResponse> sendNotification(NotificationRequest request) {
         Manager sender = (Manager) personnelRepository.findById(request.getSenderId())
                 .orElseThrow(() -> new RuntimeException("Sender not found"));
 
-        List<Personnel> recipients;
+        Department managedDepartment = sender.getDepartment();
+        if (managedDepartment == null) {
+            throw new RuntimeException("Manager does not manage any department");
+        }
+        List<Employee> employeesInDepartment = employeeRepository.findAllEmployees().stream()
+                .filter(employee -> managedDepartment.equals(employee.getDepartment()))
+                .collect(Collectors.toList());
+
+        List<Employee> recipients;
         if (request.isSendToAll()) {
-            recipients = personnelRepository.findAllEmployees(); // Custom query lấy tất cả employee
+            recipients = employeesInDepartment;
         } else {
-            recipients = personnelRepository.findAllById(request.getRecipientIds());
+            recipients = employeesInDepartment.stream()
+                    .filter(employee -> request.getRecipientIds().contains(employee.getCode()))
+                    .collect(Collectors.toList());
+        }
+        if (recipients.isEmpty()) {
+            throw new RuntimeException("No valid recipients found in the department");
         }
 
         Notification notification = Notification.builder()
                 .title(request.getTitle())
                 .content(request.getContent())
                 .sender(sender)
-                .recipients(recipients)
-                .isRead(false)
+                .recipients(new ArrayList<>(recipients))
                 .createdAt(LocalDateTime.now())
                 .build();
 
         notificationRepository.save(notification);
 
-        List<Long> recipientIds = request.isSendToAll() ?
-                personnelRepository.findAllEmployees().stream().map(Personnel::getCode).toList() :
-                request.getRecipientIds();
-        recipientIds.forEach(id -> messagingTemplate.convertAndSend(
-                "/topic/notifications/" + id,
-                NotificationResponse.builder()
-                        .id(notification.getId())
-                        .title(notification.getTitle())
-                        .content(notification.getContent())
-                        .createdAt(notification.getCreatedAt())
-                        .build()
-        ));
-
+        recipients.forEach(recipient -> {
+            String email = recipient.getEmail();
+            if (email != null && !email.isEmpty()) {
+                        sendEmail(
+                        email,
+                        request.getTitle(),
+                        request.getContent()
+                );
+            }
+        });
 
         return ApiResponse.<NotificationResponse>builder()
                 .code(1000)
@@ -66,10 +92,15 @@ public class NotificationService {
                         .id(notification.getId())
                         .title(notification.getTitle())
                         .content(notification.getContent())
-                        .senderName(sender.getFirstName() + " " + sender.getLastName())
-                        .recipientNames(recipients.stream()
-                                .map(r -> r.getFirstName() + " " + r.getLastName())
-                                .toList())
+                        .sender(PersonnelInfo.builder()
+                                .code(sender.getCode())
+                                .name(sender.getFirstName() + " " + sender.getLastName())
+                                .build())
+                        .recipients(recipients.stream().map(r -> PersonnelInfo.builder()
+                                        .code(r.getCode())
+                                        .name(r.getFirstName() + " " + r.getLastName())
+                                        .build())
+                                .collect(Collectors.toList()))
                         .createdAt(notification.getCreatedAt())
                         .build())
                 .build();
@@ -84,8 +115,10 @@ public class NotificationService {
                         .id(notification.getId())
                         .title(notification.getTitle())
                         .content(notification.getContent())
-                        .isRead(notification.isRead())
-                        .senderName(notification.getSender().getFirstName() + " " + notification.getSender().getLastName())
+                        .sender(PersonnelInfo.builder()
+                                .code(notification.getSender().getCode())
+                                .name(notification.getSender().getFirstName() + " " + notification.getSender().getLastName())
+                                .build())
                         .createdAt(notification.getCreatedAt())
                         .build())
                 .toList();
@@ -94,23 +127,6 @@ public class NotificationService {
                 .code(1000)
                 .message("Notifications retrieved successfully")
                 .result(notifications)
-                .build();
-    }
-
-    public ApiResponse<Void> markAsRead(Long notificationId, Long personnelId) {
-        Notification notification = notificationRepository.findById(notificationId)
-                .orElseThrow(() -> new RuntimeException("Notification not found"));
-
-        if (notification.getRecipients().stream().noneMatch(r -> r.getCode().equals(personnelId))) {
-            throw new RuntimeException("You are not authorized to mark this notification as read");
-        }
-
-        notification.setRead(true);
-        notificationRepository.save(notification);
-
-        return ApiResponse.<Void>builder()
-                .code(1000)
-                .message("Notification marked as read")
                 .build();
     }
 }
